# Prometheus

./: .gitignore  CMakeLists.txt  README.md  plan.md
include/ml/: autograd.hpp  dataloader.hpp  loss.hpp  ops.hpp  tensor.hpp
include/ml/data/: csv.hpp  dataloader.hpp  image.hpp
include/ml/metrics/: metrics.hpp
include/ml/nn/: activations.hpp  avgpool2d.hpp  batchnorm.hpp  conv2d.hpp  convtranspose2d.hpp  dropout.hpp  flatten.hpp  linear.hpp  maxpool2d.hpp  module.hpp  rnn.hpp  sequential.hpp
include/ml/optim/: adam.hpp  optimizer.hpp  rmsprop.hpp  sgd.hpp
include/ml/utils/: early_stopping.hpp  model_io.hpp  summary.hpp  trainer.hpp
src/: dataloader.cpp  loss.cpp  ops.cpp  tensor.cpp
src/data/: csv.cpp  dataloader.cpp  image.cpp
src/metrics/: metrics.cpp
src/nn/: activations.cpp  avgpool2d.cpp  batchnorm.cpp  conv2d.cpp  convtranspose2d.cpp  dropout.cpp  flatten.cpp  linear.cpp  maxpool2d.cpp  rnn.cpp  sequential.cpp
src/optim/: adam.cpp  rmsprop.cpp  sgd.cpp
src/utils/: early_stopping.cpp  model_io.cpp  summary.cpp  trainer.cpp
tests/: test.csv  test_conv2d.cpp  test_convtranspose2d.cpp  test_csv.cpp  test_dataloader.cpp  test_early_stopping.cpp  test_image.cpp  test_maxpool2d.cpp  test_metrics.cpp  test_model.cpp  test_model_io.cpp  test_rnn.cpp  test_summary.cpp  test_tensor.cpp  test_trainer.cpp
